@@ -1,3 +1,9 @@
+2002-05-06  Bruno Haible  <bruno@clisp.org>
+
+	* test1.c: Include <stdlib.h>, for exit().
+	* test2.c: Likewise.
+	* test3.c: Likewise.
+
 2002-04-28  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.devel (ACLOCAL): Remove variable.
